--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,27 @@ h1 {
     color: #ffffff;
 }
 
+input[type="checkbox"]{
+    display: none;
+  }
+input[type="checkbox"] + label{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border:3px solid #707070;
+    position: relative;
+  }
+input[id="select-checkbox"]:checked + label::after{
+    content:'✔';
+    font-size: 25px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top:0;
+  }
+
 /* 이전/다음 버튼 스타일 개선 */
 .prev, .next {
     cursor: pointer;
